# FlugzeugCompiler

./: .clang-format  .gitignore  CMakeLists.txt  compiler_comparisons
Flugzeug/: CMakeLists.txt
Flugzeug/diagrams/: storeload.drawio
Flugzeug/src/: CMakeLists.txt
Flugzeug/src/Flugzeug/IR/: Block.cpp  Block.hpp  CMakeLists.txt  ConsoleIRPrinter.cpp  ConsoleIRPrinter.hpp  ConsolePrinter.cpp  ConsolePrinter.hpp  Context.cpp  Context.hpp  DebugPrinter.cpp  DebugPrinter.hpp  DominatorTree.cpp  DominatorTree.hpp  FileIRPrinter.cpp  FileIRPrinter.hpp  FilePrinter.cpp  FilePrinter.hpp  Function.cpp  Function.hpp  GraphDumper.cpp  IRPrinter.cpp  IRPrinter.hpp  Instruction.cpp  Instruction.hpp  InstructionInserter.cpp  InstructionInserter.hpp  InstructionVisitor.hpp  Instructions.cpp  Instructions.hpp  Module.cpp  Module.hpp  Patterns.cpp  Patterns.hpp  PrintInstruction.cpp  Type.cpp  Type.hpp  TypeFilteringIterator.cpp  Use.cpp  Use.hpp  User.cpp  (+5 more)
Flugzeug/src/Flugzeug/IR/Internal/: CMakeLists.txt  DebugIRPrinter.cpp  DebugIRPrinter.hpp  DebugPrinter.cpp  DebugPrinter.hpp  GraphDumper.cpp  PrintInstruction.cpp  TypeFilteringIterator.hpp  Use.cpp  Use.hpp
Flugzeug/src/Flugzeug/IR/Parser/: AST.hpp  CMakeLists.txt  Lexer.cpp  Lexer.hpp  ModuleFromASTGenerator.cpp  ModuleFromASTGenerator.hpp  ModuleParser.cpp  ModuleParser.hpp  Parser.cpp  Parser.hpp  Token.cpp  Token.hpp
Flugzeug/src/Flugzeug/IR/Patterns/: BinaryInstr.cpp  BinaryInstr.hpp  CMakeLists.txt  Cast.cpp  Cast.hpp  General.hpp  IntCompare.cpp  IntCompare.hpp  OtherInstructions.cpp  OtherInstructions.hpp  UnaryInstr.cpp  UnaryInstr.hpp
Flugzeug/src/Flugzeug/Passes/: BlockInvariantPropagation.cpp  BlockInvariantPropagation.hpp  CFGSimplification.cpp  CFGSimplification.hpp  CMakeLists.txt  CallInlining.cpp  CallInlining.hpp  CmpSimplification.cpp  CmpSimplification.hpp  ConditionalCommonOperationExtraction.cpp  ConditionalCommonOperationExtraction.hpp  ConditionalFlattening.cpp  ConditionalFlattening.hpp  ConstPropagation.cpp  ConstPropagation.hpp  DeadBlockElimination.cpp  DeadBlockElimination.hpp  DeadCodeElimination.cpp  DeadCodeElimination.hpp  DeadStoreElimination.cpp  DeadStoreElimination.hpp  GeneralSimplification.cpp  GeneralSimplification.hpp  GlobalReordering.cpp  GlobalReordering.hpp  InstructionDeduplication.cpp  InstructionDeduplication.hpp  InstructionSimplification.cpp  InstructionSimplification.hpp  KnownBitsOptimization.cpp  KnownBitsOptimization.hpp  KnownLoadElimination.cpp  KnownLoadElimination.hpp  LocalReordering.cpp  LocalReordering.hpp  LoopInvariantOptimization.cpp  LoopInvariantOptimization.hpp  LoopMemoryExtraction.cpp  LoopMemoryExtraction.hpp  LoopRotation.cpp  (+14 more)
Flugzeug/src/Flugzeug/Passes/Analysis/: CMakeLists.txt  Loops.cpp  Loops.hpp  Paths.cpp  Paths.hpp  PointerAliasing.cpp  PointerAliasing.hpp  SCC.cpp  SCC.hpp
Flugzeug/src/Flugzeug/Passes/Memory/: CMakeLists.txt  DeadStoreElimination.cpp  DeadStoreElimination.hpp  KnownLoadElimination.cpp  KnownLoadElimination.hpp  storeload.drawio
Flugzeug/src/Flugzeug/Passes/Utils/: CMakeLists.txt  Commutative.cpp  Commutative.hpp  Evaluation.cpp  Evaluation.hpp  Inline.cpp  Inline.hpp  LoopTransforms.cpp  LoopTransforms.hpp  OptimizationLocality.cpp  OptimizationLocality.hpp  OptimizationResult.cpp  OptimizationResult.hpp  Propagation.cpp  Propagation.hpp  SimplifyPhi.cpp  SimplifyPhi.hpp
Tests/: main.tc  memory.tc  obfuscate_test.tc  simple.tc  test.tc  test_block_invariant.tc  test_invariant.tc  xd.tc
TestsBF/: test.bf
TestsTC/: branches.tc  deobf.tc  extraction.tc  fib.tc  loops.tc  loops_memory.tc  main.tc  memory.tc  simple.tc  simplify.tc  test.tc  test_flatten.tc
src/: CMakeLists.txt  FunctionsCreator.cpp  FunctionsCreator.hpp  main.cpp
src/Core/: Casting.hpp  (+12 more)
test/: CMakeCache.txt  Makefile  cmake_install.cmake
(+109 files in other folders)
